# csmg

./: .gitignore  README.md
workflow/emscripten/first_program/: main.c
workflow/emscripten/interop/c_cpp/: Makefile  custom_lib.h
workflow/emscripten/main_loop/: CMakeLists.txt  Makefile  build_script.bat  main.c
workflow/interop/c_cpp/: CMakeLists.txt  _flow.md  custom_lib.cpp  main.c
workflow/interop/c_cpp/pimpl/: main.c  shared_object.cpp  shared_object.h
workflow/interop/c_cpp/pimpl_mutable/: CMakeLists.txt  _flow.md  main.c  shared_object.cpp  shared_object.h
workflow/linker/flat/: CMakeLists.txt  _flow.md
workflow/linker/independent/: _flow.md
workflow/linker/independent/source/: CMakeLists.txt  build_script.bat
workflow/linker/nested/: CMakeLists.txt
